force-app/main/default/objects/fw1__Invoice__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>TEXT(fw1__Account__r.Type)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>