force-app/main/default/objects/fw1__Invoice__c/fields/Billing_Account_Site__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Site__c</fullName>
    <label>Billing Account Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>