force-app/main/default/objects/fw1__Invoice__c/fields/Billing_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Billing Company Name)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>