force-app/main/default/objects/fw1__Invoice__c/fields/BillingCurrency__c.field-meta.xml
<CustomField>
    <fullName>BillingCurrency__c</fullName>
    <label>Billing Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CFA</fullName>
                <default>true</default>
                <label>CFA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>