force-app/main/default/objects/fw1__Invoice__c/fields/Bundle_Nest_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Nest_Unit_ID__c</fullName>
    <label>Bundle Nest Unit ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>