force-app/main/default/objects/fw1__Invoice__c/fields/Bundle_QB_Class_Id__c.field-meta.xml
<CustomField>
    <fullName>Bundle_QB_Class_Id__c</fullName>
    <description>This field use to populate QB class id for bundle opportunity if program is blank.</description>
    <label>Bundle QB Class Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>