force-app/main/default/objects/fw1__Invoice__c/fields/CC_Contact__c.field-meta.xml
<CustomField>
    <fullName>CC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoices (CC Contact)</relationshipLabel>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>