force-app/main/default/objects/fw1__Invoice__c/fields/Check_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Check_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Overdue</label>
    <type>Checkbox</type>
</CustomField>