force-app/main/default/objects/fw1__Invoice__c/fields/Client_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_Tax_ID__c</fullName>
    <label>Client Tax ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>