force-app/main/default/objects/fw1__Invoice__c/fields/Comments_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Comments_to_Client__c</fullName>
    <label>Comments to Client</label>
    <type>TextArea</type>
</CustomField>