force-app/main/default/objects/fw1__Invoice__c/fields/ConversionRate__c.field-meta.xml
<CustomField>
    <fullName>ConversionRate__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Conversion Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>