force-app/main/default/objects/fw1__Invoice__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>fw1__Opportunity__r.Department__c</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>