force-app/main/default/objects/fw1__Invoice__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>fw1__Opportunity__r.Programc__r.Division__c</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>