force-app/main/default/objects/fw1__Invoice__c/fields/DMS_Inv_Num__c.field-meta.xml
<CustomField>
    <fullName>DMS_Inv_Num__c</fullName>
    <label>DMS Inv Num</label>
    <length>30</length>
    <type>Text</type>
</CustomField>