force-app/main/default/objects/fw1__Invoice__c/fields/DMS_Inv_Total__c.field-meta.xml
<CustomField>
    <fullName>DMS_Inv_Total__c</fullName>
    <label>DMS  Inv Total</label>
    <length>20</length>
    <type>Text</type>
</CustomField>