force-app/main/default/objects/fw1__Invoice__c/fields/DMS_qb_balance_due__c.field-meta.xml
<CustomField>
    <fullName>DMS_qb_balance_due__c</fullName>
    <label>DMS qb balance due</label>
    <length>20</length>
    <type>Text</type>
</CustomField>