force-app/main/default/objects/fw1__Invoice__c/fields/DMS_qb_Id__c.field-meta.xml
<CustomField>
    <fullName>DMS_qb_Id__c</fullName>
    <label>DMS qb Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>