force-app/main/default/objects/fw1__Invoice__c/fields/DMS_qb_txn_id__c.field-meta.xml
<CustomField>
    <fullName>DMS_qb_txn_id__c</fullName>
    <label>DMS qb txn id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>