force-app/main/default/objects/fw1__Invoice__c/fields/Entity_txt__c.field-meta.xml
<CustomField>
    <fullName>Entity_txt__c</fullName>
    <formula>fw1__Entity__r.Name</formula>
    <label>Entity_txt</label>
    <type>Text</type>
</CustomField>