force-app/main/default/objects/fw1__Invoice__c/fields/External_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Account_Id__c</fullName>
    <formula>fw1__Account__r.External_Record_Id__c</formula>
    <label>External Account Id</label>
    <type>Text</type>
</CustomField>