force-app/main/default/objects/fw1__Invoice__c/fields/External_Billing_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Billing_Company_Name__c</fullName>
    <formula>Billing_Company_Name__r.External_Record_Id__c</formula>
    <label>External Billing Company Name</label>
    <type>Text</type>
</CustomField>