force-app/main/default/objects/fw1__Invoice__c/fields/External_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Id__c</fullName>
    <formula>fw1__Contact__r.External_Record_Id__c</formula>
    <label>External Contact Id</label>
    <type>Text</type>
</CustomField>