force-app/main/default/objects/fw1__Invoice__c/fields/External_ContactName_Id__c.field-meta.xml
<CustomField>
    <fullName>External_ContactName_Id__c</fullName>
    <formula>fw1_ContactName__r.External_Record_Id__c</formula>
    <label>External ContactName Id</label>
    <type>Text</type>
</CustomField>