force-app/main/default/objects/fw1__Invoice__c/fields/External_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Opportunity_Id__c</fullName>
    <formula>fw1__Opportunity__r.External_Record_Id__c</formula>
    <label>External Opportunity Id</label>
    <type>Text</type>
</CustomField>