force-app/main/default/objects/fw1__Invoice__c/fields/External_Payment_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Payment_Profile_Id__c</fullName>
    <formula>fw1__Payment_Profile__r.External_Record_Id__c</formula>
    <label>External Payment Profile Id</label>
    <type>Text</type>
</CustomField>