force-app/main/default/objects/fw1__Invoice__c/fields/Federal_Tax_ID__c.field-meta.xml
<CustomField>
    <fullName>Federal_Tax_ID__c</fullName>
    <inlineHelpText>Default SCS Global Tax ID will print on invoice. To override please enter Federal Tax Id for SCS Consulting or Ivory Coast</inlineHelpText>
    <label>Federal Tax ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>