force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>fw1__Account_Name__c</fullName>
    <formula>fw1__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>