force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Age__c.field-meta.xml
<CustomField>
    <fullName>fw1__Age__c</fullName>
    <formula>IF( fw1__Balance_Due__c &gt; 0,
IF( fw1__Installment_Count__c &gt; 0,fw1__Current_Installment_Age__c,
IF( TODAY() &gt; fw1__Due_Date__c,ROUND(TODAY() - fw1__Due_Date__c,0),0)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>