force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Alternate_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>fw1__Alternate_Invoice_Number__c</fullName>
    <label>External Invoice Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>