force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Auto_BillPay__c.field-meta.xml
<CustomField>
    <fullName>fw1__Auto_BillPay__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to automatically bill installments</inlineHelpText>
    <label>Auto-BillPay</label>
    <type>Checkbox</type>
</CustomField>