force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Auto_BillPay_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Auto_BillPay_Date__c</fullName>
    <label>Auto-BillPay Date</label>
    <type>Date</type>
</CustomField>