force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Auto_BillPay_Options__c.field-meta.xml
<CustomField>
    <fullName>fw1__Auto_BillPay_Options__c</fullName>
    <description>Installment Auto-BillPay Options</description>
    <label>Auto-BillPay Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Installment Date</fullName>
                <default>true</default>
                <label>Installment Date</label>
            </value>
            <value>
                <fullName>Installment Due Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>