force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>fw1__Balance_Due__c</fullName>
    <formula>ROUND(fw1__Total_Invoice_Amount__c  -  fw1__Total_Paid_Amount__c -  fw1__Authorized_Amount__c - fw1__Pending_Settlement_Amount__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>