force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Balance_Due_In_Words__c.field-meta.xml
<CustomField>
    <fullName>fw1__Balance_Due_In_Words__c</fullName>
    <label>Balance Due In Words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>