force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_Period__c</fullName>
    <label>Billing Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>