force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Billing_Period_End__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_Period_End__c</fullName>
    <label>Billing Period End</label>
    <type>Date</type>
</CustomField>