force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Billing_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_Period_Start__c</fullName>
    <label>Billing Period Start</label>
    <type>Date</type>
</CustomField>