force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_Street__c</fullName>
    <label>Billing Street</label>
    <type>TextArea</type>
</CustomField>