force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_Zip__c</fullName>
    <label>Billing Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>