force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Cleared_For_Fulfillment__c.field-meta.xml
<CustomField>
    <fullName>fw1__Cleared_For_Fulfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleared For Fulfillment</label>
    <type>Checkbox</type>
</CustomField>