force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Credit_Card_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Card_Failure_Reason__c</fullName>
    <label>Credit Card Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>