force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Current_Installment_Age__c.field-meta.xml
<CustomField>
    <fullName>fw1__Current_Installment_Age__c</fullName>
    <formula>IF(TODAY() &gt;  fw1__Current_Installment_Due_Date__c, 
     ROUND(TODAY() - fw1__Current_Installment_Due_Date__c, 0),
     0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Installment Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>