force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Current_Installment_Auto_BillPay_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Current_Installment_Auto_BillPay_Date__c</fullName>
    <label>Current Installment Auto BillPay Date</label>
    <type>Date</type>
</CustomField>