force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Current_Installment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Current_Installment_Due_Date__c</fullName>
    <label>Current Installment Due Date</label>
    <summarizedField>fw1__Installment__c.fw1__Due_Date__c</summarizedField>
    <summaryFilterItems>
        <field>fw1__Installment__c.fw1__Balance_Due__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>fw1__Installment__c.fw1__Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>