force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Delinquent__c.field-meta.xml
<CustomField>
    <fullName>fw1__Delinquent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delinquent (OBSOLETE)</label>
    <type>Checkbox</type>
</CustomField>