force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Do_Not_Allow_Credit_Card_Payment_Online__c.field-meta.xml
<CustomField>
    <fullName>fw1__Do_Not_Allow_Credit_Card_Payment_Online__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Allow Credit Card Payment Online</label>
    <type>Checkbox</type>
</CustomField>