force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Do_Not_Send_Receipt__c.field-meta.xml
<CustomField>
    <fullName>fw1__Do_Not_Send_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to disable sending receipt when a payment is made.</inlineHelpText>
    <label>Do Not Send Receipt</label>
    <type>Checkbox</type>
</CustomField>