force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Do_Not_Store_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>fw1__Do_Not_Store_Credit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Store Credit Card/Bank Account</label>
    <type>Checkbox</type>
</CustomField>