force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Due_Date__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>