force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Due_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Due_Installment_Amount__c</fullName>
    <description>Note: this field is for internal use only and should not be used on reports.</description>
    <label>Due Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>