force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Email_Currency_Symbol__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_Currency_Symbol__c</fullName>
    <label>Email Currency Symbol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>