force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Email_Footer__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_Footer__c</fullName>
    <label>Email Footer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>