force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Email_me_a_copy_of_invoice__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_me_a_copy_of_invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email me a copy of invoice</label>
    <type>Checkbox</type>
</CustomField>