force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Email_Message__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_Message__c</fullName>
    <label>Email Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>