force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>fw1__Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>