force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Enter_Down_Payment_In__c.field-meta.xml
<CustomField>
    <fullName>fw1__Enter_Down_Payment_In__c</fullName>
    <label>Enter Down Payment In</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>