force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Entity__c.field-meta.xml
<CustomField>
    <fullName>fw1__Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entity</label>
    <referenceTo>fw1__Entity__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>