force-app/main/default/objects/fw1__Invoice__c/fields/fw1__File_Attachment_Ids__c.field-meta.xml
<CustomField>
    <fullName>fw1__File_Attachment_Ids__c</fullName>
    <label>File Attachment Ids</label>
    <type>TextArea</type>
</CustomField>