force-app/main/default/objects/fw1__Invoice__c/fields/fw1__From_Email_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__From_Email_Address_Id__c</fullName>
    <label>From Email Address Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>