force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Installment_Count__c.field-meta.xml
<CustomField>
    <fullName>fw1__Installment_Count__c</fullName>
    <label>Installment Count</label>
    <summaryForeignKey>fw1__Installment__c.fw1__Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>