force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Installments_Reconfiguration_Needed__c.field-meta.xml
<CustomField>
    <fullName>fw1__Installments_Reconfiguration_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installments Reconfiguration Needed</label>
    <type>Checkbox</type>
</CustomField>