force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>