force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Invoice_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice_Discount_Amount__c</fullName>
    <label>Invoice Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>