force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Invoice_Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>fw1__Invoice_Discount_Percentage__c</fullName>
    <label>Invoice Discount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>