force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Overdue__c</fullName>
    <formula>IF( AND(fw1__Balance_Due__c &gt; 0,
        fw1__Age__c &gt; 0,
        NOT( fw1__Is_Payment_Pending__c )), 
    True, 
    False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>