force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Paid__c</fullName>
    <formula>IF( AND(fw1__Total_Invoice_Amount__c &gt; 0,
        ROUND(fw1__Total_Invoice_Amount__c , 2 )= ROUND(fw1__Total_Paid_Amount__c , 2 ) ,
        fw1__Balance_Due__c = 0),
        True,
        False
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Paid</label>
    <type>Checkbox</type>
</CustomField>