force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Is_Partial__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Partial__c</fullName>
    <formula>IF( AND(fw1__Total_Invoice_Amount__c &gt; 0,
        fw1__Total_Paid_Amount__c &gt; 0,
        fw1__Total_Invoice_Amount__c &gt; fw1__Total_Paid_Amount__c,
        fw1__Balance_Due__c &gt; 0), 
    True, 
    False
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Partial</label>
    <type>Checkbox</type>
</CustomField>