force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Is_Payment_Pending__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Payment_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Pending</label>
    <type>Checkbox</type>
</CustomField>