force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Is_Stop_Collection__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Stop_Collection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Collection</label>
    <type>Checkbox</type>
</CustomField>