force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Is_Voided__c.field-meta.xml
<CustomField>
    <fullName>fw1__Is_Voided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Voided</label>
    <type>Checkbox</type>
</CustomField>