force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Latest_Invoice_PDF__c.field-meta.xml
<CustomField>
    <fullName>fw1__Latest_Invoice_PDF__c</fullName>
    <description>Link to the latest generated Invoice PDF file.</description>
    <label>Latest Invoice PDF</label>
    <type>Url</type>
</CustomField>