force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Locale__c.field-meta.xml
<CustomField>
    <fullName>fw1__Locale__c</fullName>
    <label>Locale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>fw1__Locale_Values</valueSetName>
    </valueSet>
</CustomField>