force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Merchant_Reference__c.field-meta.xml
<CustomField>
    <fullName>fw1__Merchant_Reference__c</fullName>
    <label>Merchant Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>