force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Number_of_Retries__c.field-meta.xml
<CustomField>
    <fullName>fw1__Number_of_Retries__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Retries</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>