force-app/main/default/objects/fw1__Invoice__c/fields/fw1__Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan</label>
    <referenceTo>fw1__Payment_Plan__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>